--- a/devlopment_data.html
+++ b/devlopment_data.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>samir chaudhari</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime rem, commodi repellendus illo velit sequi labore rerum distinctio consequuntur exercitationem nulla sit fuga iste, dolorem cum voluptatibus ad dignissimos odio. Accusantium sit, aspernatur asperiores aut totam, harum natus velit quidem ad dolorum incidunt, exercitationem inventore reprehenderit. Ipsum soluta animi delectus, rerum reiciendis corrupti totam consequuntur iusto inventore odit vel cupiditate neque laboriosam ea eius facere minus ex repudiandae! Rerum sequi fugit hic harum aspernatur beatae expedita illum possimus culpa reprehenderit fuga eveniet modi doloremque atque aliquid nostrum quis porro veritatis, veniam necessitatibus quas saepe, suscipit incidunt? Soluta praesentium optio omnis.</p>
+    
+    <p>Lorem ipsum dolor sit Amet consectetur adipisicing elit. Maxime rem, commodi repellendus illo velit sequi labore rerum distinctio consequuntur exercitationem nulla sit fuga iste, dolorem cum voluptatibus ad dignissimos odio. Accusantium sit, aspernatur asperiores aut totam, harum natus velit quidem ad dolorum incidunt, exercitationem inventore reprehenderit. Ipsum soluta animi delectus, rerum reiciendis corrupti totam consequuntur iusto inventore odit vel cupiditate neque laboriosam ea eius facere minus ex repudiandae! Rerum sequi fugit hic harum aspernatur beatae expedita illum possimus culpa reprehenderit fuga eveniet modi doloremque atque aliquid nostrum quis porro veritatis, veniam necessitatibus quas saepe, suscipit incidunt? Soluta praesentium optio omnis.</p>
+
 </body>
 </html>
